2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Fix eol-style in UploadString, and when saving
	files to disk copy the gz compressed file if it exists.

2009-06-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: When getting work, prefer working on an already
	started revision.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Refactor md5 code out and add the possibility
	to upload a string.x

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>


	* FileManager.cs: Moved into its own project.

	* Makefile:
	* DB.cs: Add support for storing files outside of the
	database.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Propagate the extension correctly on file 
	upload to set the correct mime type.
